@startuml
class AuthenticationController {
    + AuthenticationController(authentificationHelper:IAuthentificationHelper)
    + <<async>> checkUsername(username:string) : Task<ActionResult<Guid>>
    + <<async>> AuthenticateByCard(cardId:Guid) : Task<ActionResult>
    + <<async>> AuthenticateByUsername(request:AuthenticationRequest) : Task<ActionResult>
}
class AuthenticationRequest {
    + Username : string <<get>> <<set>>
    + Password : string <<get>> <<set>>
}
ControllerBase <|-- AuthenticationController
AuthenticationController --> "_authentificationHelper" IAuthentificationHelper
@enduml
